# EcoNet-BeeSafeAI

./: Qwen_rust_20260210_5ka3nicdy.rs  Qwen_rust_20260210_8yuh1vg7j.rs  Qwen_rust_20260210_kh0ovyc06.rs  Qwen_rust_20260210_u71x11jjt.rs  README.md
.github/workflows/: ci-cd.yml
bee-beeshard-schema/src/: lib.rs
beesafetykernel/src/: lib.rs
crates/beeroh_kernel/src/: lib.rs
crates/hive_guard/src/: lib.rs
data/qpudatashards/: bee_roh_phoenix_2026_v1.csv
docs/: EcoNet-BeeSafeAI.md  Enforcing Non-Relaxable Rights_ A Control-Theoreti.md  nanosafe-honeybees.md
governance/: citizen_rewards.rs  ecocert.rs
hive_inner_ledger/: Cargo.toml
hive_inner_ledger/src/: lib.rs
nanoscripts/: BeeGlobalNanoCount2026v1.rs
nanoswarm-bee-safe/src/: eco_envelope.rs  lib.rs  policy.rs  pollinator_profile.rs
qpudatashards/: arizona_drought_tolerant_bee_forage_shard.csv
qpudatashards/bee_neural_corridor/: bee_neural_corridor_window_v1.csv
qpudatashards/particles/: BeeHBNodeHBMetric2026v1.csv  BeeNeuralSafePhoenixCorridors2026v1.csv
reality_os/: lifeforce5d_voxel_bee.rs
reality_os/governance/: bee_life_envelope.rs
specs/extensions/: bee-exergy-polytope-v1.jsonld
src/EcoNet.BeeSafeAI/ThermalValidator/: Cargo.toml  HiveThermalCorridorValidator.cs
src/EcoNet.BeeSafeAI/ThermalValidator/src/: hive_thermal_corridor_validator.rs
tests/: ThermalValidatorTests.rs
xr-lab-grid/nanopoly/: baselines.rs  nanopoly_object.rs  nanoswarm_bee_policy.rs  nanowave.rs  pollinator.rs  pollinator_controller.rs  pollinator_risk.rs  pollinator_swarm.rs  rad_binding.rs
(+1 files in other folders)
