[package]
name = "hive_thermal_corridor_validator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "EcoNet BeeSafeAI hive thermal corridor validator with honey-bee neural safety corridors"
repository = "https://github.com/Doctor0Evil/EcoNet-BeeSafeAI"

[lib]
name = "hive_thermal_corridor_validator"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["macros", "serde"] }

[dev-dependencies]
approx = "0.5"
